--- a/scss/module/_nav.scss
+++ b/scss/module/_nav.scss
@@ -2,23 +2,42 @@
 .nav {
   &__item {
     display: block;
-    border-top: 1px solid #fff;
-  }
-}
+    padding: 1em 0;
 
-.nav--list {
-  display: none;
+    a {
+      display: inline-block;
+      color: #fff;
+    }
+  }
+
+  &--list {
+    display: none;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, .8);
+  }
 }
 
 .nav--button {
-  display: inline-block;
-  padding: 0.5em;
+  margin: 0.5em 1em 0 0;
+  @include hamburger();
+}
 
-  &__trigger {
-    width: 40px;
-    height: 40px;
-    vertical-align: middle;
-  }
+.nav--button.close {
+  @include hamburger_close();
+}
+
+.nav--button.close + .nav--list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  @include css3('animation-duration', 1.5s);
+  @include css3('animation-fill-mode', both);
+  animation-name: c_fade;
 }
 
 // Tablet
@@ -26,6 +45,8 @@
   &__item {
     display: inline-block;
     border: none;
+    padding: 0;
+    text-align: left;
 
     a {
       display: inline-block;
@@ -36,6 +57,9 @@
 
   &--list {
     display: block;
+    height: 100%;
+    position: static;
+    background: none;
   }
 
   &--button {
