--- a/scss/module/_proj.scss
+++ b/scss/module/_proj.scss
@@ -20,6 +20,11 @@
       text-decoration: none;
       -webkit-transition: 0.4s;
       transition: 0.4s;
+
+      img {
+        filter: none;
+        -webkit-filter: grayscale(0%);
+      }
     }
   }
 
@@ -28,6 +33,60 @@
 
     img {
       width: 100%;
+    }
+  }
+
+  &__info {
+    padding: 1em 0;
+  }
+
+  &__intro {
+    line-height: 150%;
+    padding: 1em 0 3em;
+  }
+
+  &__tags {
+    &--items {
+      display: inline-block;
+      padding: .2em .5em;
+      margin: .5em .5em .5em 0;
+
+      span {
+        position: relative;
+        display: inline-block;
+        height: 30px;
+        line-height: 30px;
+        padding: 0 1em;
+        background-color: #000;
+        border-radius: 0 3px 3px 0;
+        color: #fff;
+      }
+
+      span:before {
+        content: '';
+        width: 0;
+        height: 0;
+        position: absolute;
+        top: 0;
+        left: -15px;
+        border-color: transparent #000 transparent transparent;
+        border-style: solid;
+        border-width: 15px 15px 15px 0;
+      }
+
+      span:after {
+        display: block;
+        content: '';
+        width: 6px;
+        height: 6px;
+        position: absolute;
+        top: 50%;
+        left: 0;
+        z-index: 2;
+        margin-top: -3px;
+        background-color: #fff;
+        border-radius: 100%;
+      }
     }
   }
 
@@ -57,6 +116,9 @@
     width: 100px;
     height: auto;
     float: left;
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+    filter: gray;
+    -webkit-filter: grayscale(100%);
   }
 
 
