--- a/scss/utility/_animation.scss
+++ b/scss/utility/_animation.scss
@@ -21,6 +21,16 @@
   }
 }
 
+@keyframes hero_fade {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 @keyframes c_fadeInUp {
   0% {
     opacity: 0;
