--- a/scss/foundation/base/_init.scss
+++ b/scss/foundation/base/_init.scss
@@ -18,31 +18,33 @@ body {
   font-kerning: normal;
   line-height: 150%;
   font-family: $_custom-font-family;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 h1 {
-
+  font-size: 32px;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
 }
 
 h2 {
   font-size: 28px;
-  font-family: 'Noto Serif', serif;
-  font-weight: 400;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
   line-height: 170%;
-  letter-spacing: 3px
+  letter-spacing: 0.08em;
+  text-align: center;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 h3 {
   font-size: 22px;
-  font-family: 'Noto Serif', serif;
-  font-weight: 400;
-  line-height: 170%;
-  letter-spacing: 2px;
-}
-
-h4 {
-  
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
+  line-height: 13px;
+  letter-spacing: 0.05em;
+  margin-bottom: 30px;
 }
 
 a {
