--- a/scss/module/_button.scss
+++ b/scss/module/_button.scss
@@ -1,5 +1,6 @@
 // Button
 .button {
+  display: block;
   width: 280px;
   margin-left: auto;
   margin-right: auto;
@@ -8,7 +9,9 @@
   border: 2px solid #0adebd;
   text-align: center;
   color: $_color-text;
-  letter-spacing: 2px;
+  letter-spacing: 0.05em;
+  font-weight: 700;
+  font-size: 18px;
   -webkit-transition: 0.8s;
   transition: 0.8s;
 
