--- a/scss/module/_nav.scss
+++ b/scss/module/_nav.scss
@@ -35,8 +35,8 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  @include css3('animation-duration', 1.5s);
-  @include css3('animation-fill-mode', both);
+  animation-duration: 1.5s;
+  animation-fill-mode: both;
   animation-name: c_fade;
 }
 
