--- a/scss/utility/_margin.scss
+++ b/scss/utility/_margin.scss
@@ -3,31 +3,38 @@
 
 // Margin-top
 .u-mt {
-  
-  &-70 {
-    margin-top: 70px;
-  }
-
-  &-50 {
-    margin-top: 50px;
-  }
+  @for $i from 1 through 10 {
+    &-#{$i * 5} {
+      margin-top: ($i * 5) * 1px;
+    }
+  }  
 }
 
 // Margin-right
 .u-mr {
-
+  @for $i from 1 through 10 {
+    &-#{$i * 5} {
+      margin-right: ($i * 5) * 1px;
+    }
+  }
 }
 
 // Margin-bottom
 .u-mb {
-  &-70 {
-    margin-bottom: 70px;
+  @for $i from 1 through 10 {
+    &-#{$i * 5} {
+      margin-bottom: ($i * 5) * 1px;
+    }
   }
 }
 
 // Margin-left
 .u-ml {
-
+  @for $i from 1 through 10 {
+    &-#{$i * 5} {
+      margin-left: ($i * 5) * 1px;
+    }
+  }
 }
 
 // Margin-left/right Auto
