--- a/scss/utility/_padding.scss
+++ b/scss/utility/_padding.scss
@@ -3,40 +3,36 @@
 
 // Padding-top
 .u-pt {
-  &-95 {
-    padding-top: 95px;
-  }
-
-  &-70 {
-    padding-top: 70px;
-  }
-
-  &-40 {
-    padding-top: 40px;
+  @for $i from 1 through 10 {
+    &-#{$i * 5} {
+      padding-top: ($i * 5) * 1px;
+    }
   }
 }
 
 // Padding-right
 .u-pr {
-
+  @for $i from 1 through 10 {
+    &-#{$i * 5} {
+      padding-right: ($i * 5) * 1px;
+    }
+  }
 }
 
 // Padding-bottom
 .u-pb {
-  &-70 {
-    padding-bottom: 70px;
-  }
-
-  &-40 {
-    padding-bottom: 40px;
-  }
-
-  &-20 {
-    padding-bottom: 20px;
+  @for $i from 1 through 10 {
+    &-#{$i * 5} {
+      padding-bottom: ($i * 5) * 1px;
+    }
   }
 }
 
 // Padding-left
 .u-pl {
-
+  @for $i from 1 through 10 {
+    &-#{$i * 5} {
+      padding-left: ($i * 5) * 1px;
+    }
+  }
 }
