--- a/scss/module/_hexagon.scss
+++ b/scss/module/_hexagon.scss
@@ -13,7 +13,7 @@
   width: 250px; 
   height: 144.34px;
   margin: 72.17px auto;
-  background-image: url(../img/profile500.png);
+  background-image: url(../img/min-profile2.png);
   background-size: auto 288.6751px;
   background-position: center;
 }
