--- a/scss/foundation/base/_init.scss
+++ b/scss/foundation/base/_init.scss
@@ -22,7 +22,7 @@ body {
 }
 
 h1 {
-  font-size: 32px;
+  font-size: 41px;
   font-family: 'Oswald', sans-serif;
   font-weight: 700;
 }
@@ -34,15 +34,32 @@ h2 {
   line-height: 170%;
   letter-spacing: 0.08em;
   text-align: center;
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 60px;
+  padding-bottom: 100px;
+  position: relative;
+
+  &:after {
+    content: "";
+    width: 80px;
+    height: 5px;
+    background-color: #333;
+    position: absolute;
+    bottom: 90px;
+    left: calc(50% - 40px);
+  }
+
+  &.inverse {
+    &:after {
+      background-color: #fff;
+    }
+  }
 }
 
 h3 {
   font-size: 22px;
   font-family: 'Oswald', sans-serif;
   font-weight: 700;
-  line-height: 13px;
+  line-height: 20px;
   letter-spacing: 0.05em;
   margin-bottom: 30px;
 }
