--- a/scss/foundation/mixin/_flex.scss
+++ b/scss/foundation/mixin/_flex.scss
@@ -2,8 +2,12 @@
 
 @mixin flex() {
   display: flex;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
+
+  &__a-items {
+    align-items: center;
+  }
 
   &__direction--column {
     flex-direction: column;
