--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,7 +1,21 @@
 // Header
 .l-header {
   width: 100%;
-  background-color: rgba(0,0,0,0.5);
+  background-color: transparent;
   position: fixed;
-  z-index: 5;
+  z-index: 10;
+  padding-left: 1em;
+  padding-right: 1em;
+}
+
+// Tablet
+@include getMediaQueryMin('.l-header','sm') {
+  padding-left: 3em;
+  padding-right: 3em;
+}
+
+// PC
+@include getMediaQueryMin('.l-header','md') {
+  padding-left: 8em;
+  padding-right: 8em;
 }
