--- a/scss/mixin/_menu.scss
+++ b/scss/mixin/_menu.scss
@@ -1,33 +1,34 @@
 // Make a hamburger menu
 @mixin hamburger() {
   display: inline-block;
+  cursor: pointer;
   position: relative;
   z-index: 15;
-  width: 40px;
-  height: 40px;
+  width: 44px;
+  height: 38px;
   
   & > span {
     display: block;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 28px;
+    top: 46%;
+    left: 45%;
+    width: 32px;
     height: 4px;
     // margin-top = height/2
     // margin-left = width/2
     margin: -2px 0 0 -14px;
-    background: #fff;
+    background: #ccc;
     transition: .2s;
 
     &:before,&:after {
       display: block;
       content: "";
       position: absolute;
-      top: 50%;
+      top: 51%;
       left: 0;
-      width: 28px;
+      width: 32px;
       height: 4px;
-      background: #fff;
+      background: #ccc;
       transition: .3s;
     }
 
