--- a/scss/module/_hero.scss
+++ b/scss/module/_hero.scss
@@ -25,7 +25,7 @@
   }
 
   &__title {
-    line-height: 35px;
+    line-height: 43px;
     letter-spacing: 0.025em;
 
     & > em {
@@ -34,7 +34,66 @@
   }
 
   &__text {
-    font-size: 14px;
-    line-height: 16px;
+    font-size: 15px;
+    line-height: 17px;
+
+    & > em {
+      display: inline-block;
+    }
+  }
+
+  &__anime {
+    position: absolute;
+    bottom: 50px;
+    left: calc(50% - 15px);
+    z-index: 5;
+  }
+
+  &__arrow {
+    position: relative;
+    display: inline-block;
+    padding: 0 0 0 16px;
+    color: #000;
+    vertical-align: middle;
+    text-decoration: none;
+    animation: bounce 2s infinite;
+
+    &:before {
+      content: "";
+      width: 25px;
+      height: 25px;
+      border-top: 1px solid #fff;
+      border-right: 1px solid #fff;
+      -webkit-transform: rotate(135deg);
+      transform: rotate(135deg);
+      position: absolute;
+      top: 0;
+      left: 3px;
+    }
+  }
+}
+
+// Tablet
+@include getMediaQueryMin('.hero','sm') {
+  &__inner {
+    padding: 0 3em;
+  }
+
+  &__title {
+    & > em {
+      display: inline-block;
+      padding: 0 .3em;
+    }
+  }
+
+  &__text > em {
+    display: block;
+  }
+}
+
+// PC
+@include getMediaQueryMin('.hero','md') {
+  &__inner {
+    padding: 0 8em;
   }
 }
