--- a/scss/module/_portfolio.scss
+++ b/scss/module/_portfolio.scss
@@ -11,7 +11,8 @@
     height: 15px;
     position: absolute;
     z-index: 1;
-    background-color: #FC9A4D;
+    background-color: #333;
+    transition: 0.4s;
   }
 
   &:before {
@@ -34,7 +35,7 @@
       height: 15px;
       position: absolute;
       z-index: 1;
-      background-color: #FC9A4D;
+      background-color: #333;
     }
 
     &:before {
@@ -52,7 +53,7 @@
       width: 100%;
       height: 100%;
       //sp 18%
-      padding: 28% 0;
+      padding: 18% 0;
       line-height: 180%;
       letter-spacing: 1px;
       background-color: rgba(0,0,0, .7);
@@ -66,10 +67,11 @@
   }
 
   // hover
-  &:hover {
+  &.js-hover, &:hover {
     &:before, &:after {
       width: 100%;
       height: 100%;
+      transition: 0.8s;
     }
 
     span {
@@ -83,5 +85,39 @@
     position: relative;
     z-index: 5;
   }
-
 }
+
+@include getMediaQueryMin('.portfolio','md') {
+  &__inner {
+    span {
+      padding: 28% 0;
+    }
+  }
+}
+
+
+// Each portfolio colors
+.portfolio--ew {
+  &:before, &:after {
+    background-color: #fc9a4d;
+  }
+}
+
+.portfolio--rita {
+  &:before, &:after {
+    background-color: #e1d2a9;
+  }
+}
+
+.portfolio--osazen {
+  &:before, &:after {
+    background-color: #73cad8;
+  }
+}
+
+.portfolio--ahl {
+  &:before, &:after {
+    background-color: #698759;
+  }
+}
+
