--- a/scss/module/_skill.scss
+++ b/scss/module/_skill.scss
@@ -1,27 +1,26 @@
 // Skill
 .skill {
   width: 100%;
+  color: #fff;
   padding-bottom: 15px;
+
+  &__text {
+    float: right;
+  }
 
   &__progress {
     width: 100%;
     height: 4px;
     margin-top: 5px;
-    //background-color: $_color-bg;
+    background-color: rgba(255,255,255, .3);
 
     &--percent {
-      //width: 95%;
+      width: 85%;
       height: 4px;
       background: -webkit-linear-gradient(left, #10817b 0%, #0cac94 50%, #66f5ed 100%);
       background: -o-linear-gradient(left, #10817b 0%, #0cac94 50%, #66f5ed 100%);
       background: linear-gradient(to right, #10817b 0%, #0cac94 50%, #66f5ed 100%);
       /*background-size: 200% 200%;*/
     }
-  }
-
-  &__parallax {
-    background-image: url("../img/bg_2.png");
-    background-position: center top;
-    background-size: cover;
   }
 }
