--- a/scss/module/_sns.scss
+++ b/scss/module/_sns.scss
@@ -2,10 +2,20 @@
 .sns {
   padding: 1.5em 0 1em 0;
 
+  &--about {
+    padding: 1em 0 0 0;
+  }
+
   &__item {
     display: inline-block;
     padding-left: 0.5em;
     padding-right: 0.5em;
+
+    &--about {
+      display: inline-block;
+      padding-left: 0;
+      padding-right: 1em;
+    }
 
     &--link {
       &:hover {
@@ -45,5 +55,11 @@
   &__icon {
     width: 25px;
     height: 25px;
+
+    &--about {
+      width: 25px;
+      height: 25px;
+      fill: #333;
+    }
   }
 }
