--- a/scss/module/_flex.scss
+++ b/scss/module/_flex.scss
@@ -6,6 +6,10 @@
     width: 100%;
   }
 
+  &__item--half {
+    width: 50%;
+  }
+
   @media screen and (min-width: 48em) {
     &__item {
       width: calc(50% - 10px);
