--- a/scss/module/_hero.scss
+++ b/scss/module/_hero.scss
@@ -3,6 +3,10 @@
   width: 100%;
   height: 100vh;
   @include flex();
+
+  &__proj {
+    height: 50vh;
+  }
   
 
   &__parallax {
@@ -15,6 +19,11 @@
     left: 0;
     top: 0;
     z-index: 1;
+
+    &--proj {
+      background-image: url(../img/header.jpg);
+      background-position: center top;
+    }
   }
 
   &__inner {
