--- a/scss/module/_skill.scss
+++ b/scss/module/_skill.scss
@@ -20,7 +20,7 @@
       background: -webkit-linear-gradient(left, #10817b 0%, #0cac94 50%, #66f5ed 100%);
       background: -o-linear-gradient(left, #10817b 0%, #0cac94 50%, #66f5ed 100%);
       background: linear-gradient(to right, #10817b 0%, #0cac94 50%, #66f5ed 100%);
-      /*background-size: 200% 200%;*/
+      animation: widthUp 2.5s .5s;
     }
   }
 }
