modified js file and add css loader

--- a/scss/module/_animation.scss
+++ b/scss/module/_animation.scss
@@ -9,7 +9,11 @@
   }
 
   &.slideUp {
-    animation: fadeSlideUp 1s;
+    animation: fadeSlideUp 1.5s;
+  }
+
+  &.fadeIn {
+    animation: fadeIn 1s;
   }
 }
 
