--- a/common/css/style.css
+++ b/common/css/style.css
@@ -505,6 +505,21 @@ fileoverview comment
     width: 0;
   }
 }
+@keyframes hiddenElement {
+  0% {
+    opacity: 1;
+  }
+  99% {
+    opacity: 0;
+    height: 100vh;
+    width: 100%;
+  }
+  100% {
+    opacity: 0;
+    height: 0;
+    width: 0;
+  }
+}
 @keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
     transform: translateY(0);
@@ -983,7 +998,10 @@ svg {
   animation: fadeSlideRight 1.3s;
 }
 .js.slideUp {
-  animation: fadeSlideUp 1s;
+  animation: fadeSlideUp 1.5s;
+}
+.js.fadeIn {
+  animation: fadeIn 1s;
 }
 
 .flex {
@@ -1161,4 +1179,21 @@ svg {
   letter-spacing: 0.08em;
   font-size: 20px;
   color: #333;
+}
+
+.loader {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  z-index: 100;
+  background-color: #000;
+}
+.loader svg {
+  fill: #fff;
+  position: relative;
+  left: calc(50% - 40px);
+  top: calc(50% - 40px);
+}
+.loader.js-hidden {
+  animation: hiddenElement 1s forwards;
 }
