compressed image and modified scss and js files

--- a/scss/module/_hero.scss
+++ b/scss/module/_hero.scss
@@ -11,7 +11,7 @@
   &__parallax {
     width: inherit;
     height: inherit;
-    background: url(../img/bg.png);
+    background: url(../img/bg.jpg);
     background-position: 78% top;
     background-size: cover;
     position: fixed;
