--- a/common/css/style.css
+++ b/common/css/style.css
@@ -520,6 +520,14 @@ fileoverview comment
     width: 0;
   }
 }
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 @keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
     transform: translateY(0);
@@ -741,7 +749,7 @@ svg {
 .hero__parallax {
   width: inherit;
   height: inherit;
-  background: url(../img/bg.png);
+  background: url(../img/bg.jpg);
   background-position: 78% top;
   background-size: cover;
   position: fixed;
@@ -1187,12 +1195,30 @@ svg {
   position: absolute;
   z-index: 100;
   background-color: #000;
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
 }
-.loader svg {
-  fill: #fff;
-  position: relative;
-  left: calc(50% - 40px);
-  top: calc(50% - 40px);
+.loader__a-items {
+  align-items: center;
+}
+.loader__direction--column {
+  flex-direction: column;
+}
+.loader__direction--row {
+  flex-direction: row;
+}
+.loader__wrap {
+  flex-wrap: wrap;
+}
+.loader__spin {
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  margin: 0 auto;
+  border: 0.25rem solid rgba(255, 255, 255, 0.2);
+  border-top-color: #fff;
+  animation: spin 1s infinite linear;
 }
 .loader.js-hidden {
   animation: hiddenElement 1s forwards;
