--- a/common/css/style.css
+++ b/common/css/style.css
@@ -547,9 +547,11 @@ fileoverview comment
 }
 
 .l-header {
-  width: 100%;
+  width: 100vw;
   background-color: transparent;
   position: fixed;
+  left: 0;
+  top: 0;
   z-index: 10;
   padding-left: 1em;
   padding-right: 1em;
@@ -569,6 +571,7 @@ fileoverview comment
 }
 .l-wrapper {
   width: 100%;
+  max-width: 100%;
   position: relative;
   z-index: 2;
 }
@@ -999,17 +1002,32 @@ svg {
   fill: #333;
 }
 
+/*.slideSide {
+  opacity: 0;
+}
+
+.slideUp {
+  opacity: 0;
+}
+
+.fadeIn {
+  opacity: 0;
+}*/
 .js.slideSide {
-  animation: fadeSlideLeft 1.3s;
+  animation-name: fadeSlideLeft;
+  animation-duration: 1.3s;
+  animation-fill-mode: both;
 }
 .js.slideSide:nth-child(even) {
-  animation: fadeSlideRight 1.3s;
+  animation-name: fadeSlideRight;
+  animation-duration: 1.3s;
+  animation-fill-mode: both;
 }
 .js.slideUp {
-  animation: fadeSlideUp 1.5s;
+  animation: fadeSlideUp 1.5s both;
 }
 .js.fadeIn {
-  animation: fadeIn 1s;
+  animation: fadeIn 1s both;
 }
 
 .flex {
