--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,8 +1,11 @@
 // Header
 .l-header {
-  width: 100%;
+  //width: 100%;
+  width: 100vw;
   background-color: transparent;
   position: fixed;
+  left: 0;
+  top: 0;
   z-index: 10;
   padding-left: 1em;
   padding-right: 1em;
