--- a/scss/module/_animation.scss
+++ b/scss/module/_animation.scss
@@ -1,19 +1,35 @@
 // CSS3 Animation
+/*.slideSide {
+  opacity: 0;
+}
+
+.slideUp {
+  opacity: 0;
+}
+
+.fadeIn {
+  opacity: 0;
+}*/
+
 .js {
   &.slideSide {
-    animation: fadeSlideLeft 1.3s;
+    animation-name: fadeSlideLeft;
+    animation-duration: 1.3s;
+    animation-fill-mode: both;
 
     &:nth-child(even) {
-      animation: fadeSlideRight 1.3s;
+      animation-name: fadeSlideRight;
+      animation-duration: 1.3s;
+      animation-fill-mode: both;
     }
   }
 
   &.slideUp {
-    animation: fadeSlideUp 1.5s;
+    animation: fadeSlideUp 1.5s both;
   }
 
   &.fadeIn {
-    animation: fadeIn 1s;
+    animation: fadeIn 1s both;
   }
 }
 
