fixed animation buggy translate3d

--- a/scss/layout/_section.scss
+++ b/scss/layout/_section.scss
@@ -1,6 +1,7 @@
 // Section
 .l-section {
   width: 100%;
+  overflow-x: hidden;
   padding-left: $_section-padding;
   padding-right: $_section-padding;
   margin-left: auto;
