--- a/scss/module/_about.scss
+++ b/scss/module/_about.scss
@@ -21,7 +21,7 @@
 }
 
 // Tablet
-@include getMediaQueryMin('.about','sm') {
+@include getMediaQueryMin('.about','lg') {
   &__me {
     &--img {
       width: 50%;
