--- a/common/css/style.css
+++ b/common/css/style.css
@@ -477,7 +477,7 @@ fileoverview comment
   }
   100% {
     opacity: 1;
-    transform: none;
+    transform: translate3d(0, 0, 0);
   }
 }
 @keyframes fadeSlideRight {
@@ -487,7 +487,7 @@ fileoverview comment
   }
   100% {
     opacity: 1;
-    transform: none;
+    transform: translate3d(0, 0, 0);
   }
 }
 @keyframes fadeSlideUp {
@@ -497,7 +497,7 @@ fileoverview comment
   }
   100% {
     opacity: 1;
-    transform: none;
+    transform: translate3d(0, 0, 0);
   }
 }
 @keyframes widthUp {
@@ -578,6 +578,7 @@ fileoverview comment
 
 .l-section {
   width: 100%;
+  overflow-x: hidden;
   padding-left: 1em;
   padding-right: 1em;
   margin-left: auto;
@@ -944,12 +945,15 @@ svg {
   background-color: rgba(255, 255, 255, 0.3);
 }
 .skill__progress--percent {
-  width: 85%;
+  width: 0;
   height: 4px;
   background: -webkit-linear-gradient(left, #10817b 0%, #0cac94 50%, #66f5ed 100%);
   background: -o-linear-gradient(left, #10817b 0%, #0cac94 50%, #66f5ed 100%);
   background: linear-gradient(to right, #10817b 0%, #0cac94 50%, #66f5ed 100%);
-  animation: widthUp 2.5s .5s;
+}
+
+.js .skill__progress--percent {
+  animation: widthUp 2.5s both;
 }
 
 .sns {
@@ -1002,17 +1006,10 @@ svg {
   fill: #333;
 }
 
-/*.slideSide {
+.slideSide, .slideUp, .fadeIn {
   opacity: 0;
 }
 
-.slideUp {
-  opacity: 0;
-}
-
-.fadeIn {
-  opacity: 0;
-}*/
 .js.slideSide {
   animation-name: fadeSlideLeft;
   animation-duration: 1.3s;
@@ -1020,8 +1017,6 @@ svg {
 }
 .js.slideSide:nth-child(even) {
   animation-name: fadeSlideRight;
-  animation-duration: 1.3s;
-  animation-fill-mode: both;
 }
 .js.slideUp {
   animation: fadeSlideUp 1.5s both;
@@ -1194,7 +1189,7 @@ svg {
   fill: #333;
 }
 
-@media screen and (min-width: 48em) {
+@media screen and (min-width: 75em) {
   .about__me--img {
     width: 50%;
   }
