--- a/scss/utility/_animation.scss
+++ b/scss/utility/_animation.scss
@@ -17,7 +17,7 @@
 
   100% {
     opacity: 1;
-    transform: none;
+    transform: translate3d(0, 0, 0);
   }
 }
 
@@ -29,7 +29,7 @@
 
   100% {
     opacity: 1;
-    transform: none;
+    transform: translate3d(0, 0, 0);
   }
 }
 
@@ -41,7 +41,7 @@
 
   100% {
     opacity: 1;
-    transform: none; 
+    transform: translate3d(0, 0, 0);
   }
 }
 
