--- a/scss/layout/_section.scss
+++ b/scss/layout/_section.scss
@@ -16,7 +16,7 @@
 }
 
 .bg-section {
-  background-image: url("../img/bg_2.png");
+  background-image: url("../img/bg_2.jpg");
   background-position: center top;
   background-size: cover;
 }
