Sorted SCSS files based on own Style Guide

--- a/scss/foundation/function/_em.scss
+++ b/scss/foundation/function/_em.scss
@@ -1,6 +1,16 @@
-//Functions
+//
+// Function em-calc
+// returns **em which converted from px to em
+//
+// # Usage
+//
+// ```
+// .example {
+//   width: em-calc(24px);
+//   // output -> (24px / 16px) * 1em -> 1.5em
+// }
+// ```
 
-//px to em converter
-@function em-calc($pixel, $base-size: $_base-font-size) {
+@function em-calc($pixel, $base-size: $_font-base-size) {
   @return ($pixel / $base-size) * 1em;
 }
