--- a/scss/foundation/mixin/_clearfix.scss
+++ b/scss/foundation/mixin/_clearfix.scss
@@ -1,4 +1,11 @@
-// clearfix
+//
+// Mixin clearfix
+// clearfix mixin
+// ```
+// .example {
+//   @include clearfix();
+// }
+// ```
 
 @mixin clearfix() {
   &:after {
