--- a/scss/foundation/mixin/_flex.scss
+++ b/scss/foundation/mixin/_flex.scss
@@ -1,4 +1,11 @@
-// Responsive
+// 
+// Mixin flex
+// flex-box mixin
+// ```
+// .example {
+//   @include flex();
+// }
+// ```
 
 @mixin flex() {
   display: flex;
