--- a/scss/foundation/variable/_color.scss
+++ b/scss/foundation/variable/_color.scss
@@ -1,4 +1,7 @@
+//
 // Color Variables
+// _color.scss defines variables for colors
+//
 
 $_color-text: #333 !default;
 $_color-text-invert: invert($_color-text);
