--- a/scss/foundation/base/_init.scss
+++ b/scss/foundation/base/_init.scss
@@ -1,24 +1,28 @@
-// Inital
+//
+// _init.scss defines html, body, headlines(h1-h4)
+// and a elements style.
+//
+
 *, *:before, *:after {
-  box-sizing: border-box;
+  box-sizing: $_other-box-sizing;
 }
 
 html {
-  box-sizing: border-box;
   -ms-overflow-style: scrollbar;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
-  font-size: ($_base-font-size * 1px);
+  box-sizing: $_other-box-sizing;
+  font-size: ($_font-base-size * 1px);
 }
 
 body {
-  color: $_color-text;
-  background-color: $_color-bg;
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: auto;
   font-kerning: normal;
-  line-height: 150%;
-  font-family: $_custom-font-family;
-  font-weight: 400;
+  font-weight: $_font-weight;
+  line-height: $_font-line-height;
+  font-family: $_font-family_custom;
+  color: $_color-text;
+  background-color: $_color-bg;
 }
 
 h1 {
@@ -65,10 +69,10 @@ h3 {
 }
 
 a {
-  text-decoration: $_link-default;
+  text-decoration: $_other-link-default;
 
   &:hover {
-    text-decoration: $_link-hover;
+    text-decoration: $_other-link-hover;
   }
 }
 
