--- a/scss/foundation/function/_strip-unit.scss
+++ b/scss/foundation/function/_strip-unit.scss
@@ -1,5 +1,16 @@
-// Get only the number
-// ex) strip-unit(18px) -> 18
+//
+// Function strip-unit
+// returns number without unit(s).
+//
+// # Usage
+//
+// ```
+// .example {
+//   width: (100 - strip-unit(16px))px;
+//   // output -> (100 - 16)px
+// }
+// ```
+
 @function strip-unit($n) {
   @return $n / ($n * 0 + 1);
 }
