--- a/scss/foundation/mixin/_font-size.scss
+++ b/scss/foundation/mixin/_font-size.scss
@@ -1,5 +1,16 @@
-// font-size rem base
-@mixin font-size($size, $base: 16) {
-  font-size: ($size/$base) + rem;
-}
+//
+// Mixin font-size
+//
+// font-size mixin
+// It will convert rem
+//
+// ```
+// .example {
+//   @include font-size(32);
+//   // output -> (32 / 16) -> 2rem;
+// }
+// ```
 
+@mixin font-size($size, $base: $_font-base-size) {
+  font-size: ($size / $base) * 1rem;
+}
