--- a/src/styles.css
+++ b/src/styles.css
@@ -92,6 +92,17 @@ p {
     margin-bottom: 1rem;
 }
 
+p {
+    margin-top: 0;
+    margin-bottom: 1rem;
+    line-height: 1.53;
+}
+
+ul {
+    list-style: none;
+    padding-left: 0;
+}
+
 ol,
 ul {
     padding-left: 2rem;
