--- a/src/styles.css
+++ b/src/styles.css
@@ -158,6 +158,15 @@ svg {
     display: none !important;
 }
 
+.global-visual {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
 .page-transition-enter {
     opacity: 0;
     /* transform: translate3d(0, 600px, 0); */
@@ -169,10 +178,8 @@ svg {
 }
 .page-transition-exit {
     opacity: 1;
-    transform: translate3d(0, 0, 0);
 }
 .page-transition-exit-active {
     opacity: 0;
-    transform: translate3d(0, -100px, 0);
-    transition: opacity 600ms ease-out, transform 1s ease-out;
+    transition: opacity 600ms ease-out;
 }
